refactor(ui): remove semantic from workflow views

--- a/ui/src/app/views/workflow/run/node/node.html
+++ b/ui/src/app/views/workflow/run/node/node.html
@@ -28,4 +28,4 @@
         </div>
     </div>
 </div>
-<div class="ui text active loader" *ngIf="!currentNodeRunID">{{ 'pipeline_loading' | translate }}</div>
+<nz-spin nzTip="Loading..." *ngIf="!currentNodeRunNum"></nz-spin>
